# SO-ARM101_MoveIt_IsaacSim

./: .gitignore  README.md  keyboard_joint_selector.py  readme.md
so-arm_moveit_isaacsim_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
so-arm_moveit_isaacsim_ws/install/gripper_joint_state/share/gripper_joint_state/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
so-arm_moveit_isaacsim_ws/install/moveit_servo/lib/: libmoveit_servo_lib.so.2.5.7  libmoveit_servo_lib_parameters.so.2.5.7
so-arm_moveit_isaacsim_ws/install/so_arm_teleop/share/so_arm_teleop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
so-arm_moveit_isaacsim_ws/install/so_arm_teleop/share/so_arm_teleop/cmake/: so_arm_teleopConfig.cmake
so-arm_moveit_isaacsim_ws/install/so_arm_teleop/share/so_arm_teleop/config/: servo.yaml
so-arm_moveit_isaacsim_ws/install/so_arm_teleop/share/so_arm_teleop/launch/: teleop_servo.launch.py
so-arm_moveit_isaacsim_ws/log/: latest_build
so-arm_moveit_isaacsim_ws/src/so_arm_moveit_config/config/: joint_limits.yaml  so_arm_simulated_config.yaml
so-arm_moveit_isaacsim_ws/src/so_arm_moveit_config/script/: keyboard_joint_selector.py
so-arm_moveit_isaacsim_ws/src/so_arm_teleop/: CMakeLists.txt
so-arm_moveit_isaacsim_ws/src/so_arm_teleop/config/: servo.yaml
so-arm_moveit_isaacsim_ws/src/so_arm_teleop/launch/: teleop_servo.launch.py
so-arm_moveit_isaacsim_ws/src/so_arm_teleop/scripts/: joint_state_republisher.py  keyboard_twist_teleop.py
(+30 files in other folders)
